--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app-template",
+  "name": "kek-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,13 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-icons": "^3.11.0",
+    "react-loading": "^2.0.3",
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.3",
+    "react-tooltip": "^4.2.10",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
