--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-tooltip": "^4.2.10",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
