--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "kek-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://skorotkiewicz.github.io/Suchary-React-PBS",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
