--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "kek-react",
+  "name": "suchary-react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://skorotkiewicz.github.io/Suchary-React-PBS",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
