--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^3.11.0",
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.1",
