--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-tooltip": "^4.2.10",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.1"
   },
   "scripts": {
     "predeploy": "npm run build",
